--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -2,12 +2,12 @@
 
     <div class="row">
       <div class="col-8">
-        <h3>{{blog_name}}</h3>
+        <h3>{{blog_title}}</h3>
       </div>
 
-      <div class="col-4">
+      {{!-- <div class="col-4">
         <h5>{{blog_date_created}} / By:Author's name</h5>
-      </div>
+      </div> --}}
     </div>
   <br>
   <div class="row">
