--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -5,11 +5,10 @@
         <h3>{{blog_title}}</h3>
       </div>
 
-      {{!-- <div class="col-4">
-        <h5>{{blog_date_created}} / By:Author's name</h5>
-      </div> --}}
+      <div class="col-4">
+        <h5>{{blog_date_created}}</h5>
+      </div>
     </div>
-  <br>
   <div class="row">
     {{blog_content}}
   </div>
