--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
         <ul id="nav-mobile" class="hide-on-med-and-down">
           <a class="waves-effect waves-light btn">Dashboard</a>
           <a class="waves-effect waves-light btn">Create</a>
-          <a class="waves-effect waves-light btn">Sign In</a>
+          <a class="waves-effect waves-light btn">Login</a>
           <a class="waves-effect waves-light btn">Logout</a>
         </ul>
       </div>
