--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,7 @@
 <div class="container">
 
+<p>### Proof of handlebar file ###</p>
+
   {{#each blogs as |blog|}}
     <div class="row">
       <div class="col-8">
