--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
     <nav>
       <div class="nav-wrapper">
         <ul id="nav-mobile" class="hide-on-med-and-down">
+          <a class="waves-effect waves-light btn">Home</a>
           <a class="waves-effect waves-light btn">Dashboard</a>
           <a class="waves-effect waves-light btn">Create</a>
           <a class="waves-effect waves-light btn">Login</a>
