--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,11 +16,11 @@
     <nav>
       <div class="nav-wrapper">
         <ul id="nav-mobile" class="hide-on-med-and-down">
-          <a class="waves-effect waves-light btn">Home</a>
-          <a class="waves-effect waves-light btn">Dashboard</a>
-          <a class="waves-effect waves-light btn">Create</a>
-          <a class="waves-effect waves-light btn">Login</a>
-          <a class="waves-effect waves-light btn">Logout</a>
+          <a class="waves-effect waves-light btn" id="homeBtn">Home</a>
+          <a class="waves-effect waves-light btn" id="dashBtn">Dashboard</a>
+          <a class="waves-effect waves-light btn" id="createBtn">Create</a>
+          <a class="waves-effect waves-light btn" id="loginBtn">Login</a>
+          <a class="waves-effect waves-light btn" id="logoutBtn">Logout</a>
         </ul>
       </div>
     </nav>
