--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -2,15 +2,15 @@
 
     <div class="row">
       <div class="col-8">
-        <h3>{{blog_title}}</h3>
+        <h3>{{title}}</h3>
       </div>
 
       <div class="col-4">
-        <h5>{{blog_date_created}}</h5>
+        <h5>{{date_created}}</h5>
       </div>
     </div>
   <div class="row">
-    {{blog_content}}
+    {{content}}
   </div>
 
 
