--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <h1 class="display-3">Tech Blog</h1>
     <nav>
       <div class="nav-wrapper">
-        <ul id="nav-mobile" class="hide-on-med-and-down">
+        <ul id="nav-mobile">
           <a class="waves-effect waves-light btn" id="homeBtn">Home</a>
           <a class="waves-effect waves-light btn" id="dashBtn">Dashboard</a>
           <a class="waves-effect waves-light btn" id="createBtn">Create</a>
@@ -27,7 +27,6 @@
   </header>
 {{{ body }}}
 
-  </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
