--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,16 +4,17 @@
     <div class="row">
       <div class="col-8">
         <h5>{{blog.title}}</h5>
+
       </div>
 
       <div class="col-4">
       <p>Posted: {{blog.date_created}}</p>
       </div>
     </div>
-  <br>
   <div class="row">
     <p>{{blog.content}}</p>
-  </div>
-
+  <a class="waves-effect waves-light btn" id="homeBtn">Comment</a>
+</div>
+<br>
   {{/each}}
   </div>
