--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,8 @@
           {{!-- {{#if logged_in}} --}}
           <a href="../main" class="waves-effect waves-light btn" id="homeBtn">Home</a>
           <a href="../dashboard" class="waves-effect waves-light btn" id="dashBtn">Dashboard</a>
-          <a href="../blog" class="waves-effect waves-light btn" id="createBtn">Create</a>
+          <a href="../allBlogs" class="waves-effect waves-light btn" id="allBlogBtn">All Blogs</a>
+          <a href="../createBlog" class="waves-effect waves-light btn" id="createBtn">Create</a>
           <a  href="../logout" class="waves-effect waves-light btn" id="logoutBtn">Logout</a>
           {{!-- {{else}} --}}
           <a href="../login"  class="waves-effect waves-light btn" id="loginBtn">Login</a>
