--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,36 @@
-<br>
-<div class="row">
-    <form class="col s12">
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="email" type="email" class="validate">
-          <label for="email">Email</label>
+<div class="container center">
+        <div class="row center">
+            <h5><i class="fas fa-coins"></i> Welcome back! <i class="fas fa-coins"></i></h5>
         </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <input id="password" type="password" class="validate">
-          <label for="password">Password</label>
+
+        <form class="col l4 m6 s4 center login">
+
+            <div class="row">
+                <div class="input-field col s12">
+
+                    <input id="email-login" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="password-login" type="password" class="validate">
+                    <label for="password">Password</label>
+                </div>
+            </div>
+               <button type="submit" class="login-form button-style btn"> Login</button>
+
+        </form>
+        <div class="row">
+            <button type="submit" class="waves-effect waves-light btn login-form"><i class="fas fa-sign-in-alt"></i></button>
         </div>
-      </div>
-      <a class="waves-effect waves-light btn">Login</a>
-</form>
-  </div>
+        <br>
+
+    <div class="row">
+        <a href="../signup">
+            <h6>New user? Click here to create account</h6>
+        </a>
+    </div>
+</div>
+<script src="./js/login.js"></script>
