--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,40 @@
-<h1>Signup page</h1>
+<div class="container center">
+        <div class="row center">
+            <h5>Welcome new user</h5>
+        </div>
+
+        <form class="col l4 m6 s4 center signup">
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="username-signup" type="text" class="validate">
+                    <label for="name">Name</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="email-signup" type="email" class="validate">
+                    <label for="email">Email</label>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="password-signup" type="password" class="validate">
+                    <label for="password">Password</label>
+                </div>
+            </div>
+               <button type="submit" id="signup-form" class="button-style btn"> Signup</button>
+               <a href="/login" class="button-style btn ">Login</a>
+
+        </form>
+        <div>
+            <button type="submit" id="signup-form" class="waves-effect waves-light btn"> Signup</button>
+        </div>
+
+        <br>
+        <h6><a href="../login">Returning user? Click here to login</a></h6>
+    </div>
+
+<script src="./js/signup.js"></script>
