server is listening & working

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,20 +1,1 @@
-<div class="container">
-
-  {{#each blogs as |blog|}}
-    <div class="row">
-      <div class="col-8">
-        <h5>{{blog.title}}</h5>
-
-      </div>
-
-      <div class="col-4">
-      <p>Written by {{user.name}} on {{format_date blog.date_created}}</p>
-      </div>
-    </div>
-  <div class="row">
-    <p><i>{{blog.content}}</i></p>
-  <a class="waves-effect waves-light btn" id="homeBtn">Comment</a>
-</div>
-<br>
-  {{/each}}
-  </div>
+<p>dashboard</p>
