--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,17 +1,30 @@
-<div class="container">
+<body id="grey-background">
+<br>
+<div id="white-background" class="container post z-depth-3 post-style">
+    <div class="row center">
+        <h3> Create a post </h3>
+        <form action='post_create' method="POST" class="col l10 m6 s4 center post new-post-form">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="postTitle" type="text" name="create_post_title">
+                    <label for="name">Title:</label>
+                </div>
+            </div>
 
-    <div class="row">
-      <div class="col-8">
-        <h3>{{title}}</h3>
-      </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <textarea id="postDesc" class="materialize-textarea" name="create_post_desc"></textarea>
+                    <label for="textarea1">Summary:</label>
+                </div>
+            </div>
+            <div class="row center">
+            </div>
 
-      <div class="col-4">
-        <h5>{{date_created}}</h5>
-      </div>
+        </form>
+
     </div>
-  <div class="row">
-    <p>{{content}}</p>
-  </div>
+    <button type="submit" class="button-style btn center save"><i class="far fa-save"></i></button>
+</div>
+</body>
 
-
-  </div>
+<script src="/js/post.js"></script>
