edit delete in-progress

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,1 +1,81 @@
-<p>Welcome, {{ name }}</p>
+     <h4 class="display-3">Welcome, {{name}}</h4>
+<br>
+{{!-- POST BODY --}}
+<body id="postContainer">
+    {{#each posts as |post|}}
+    <div id="dash-style" class="container">
+        <div id="white-background" class="post-style">
+            <div class="row post-style">
+                <div class="col-8">
+                    <h5>{{post.title}}</h5>
+                    <hr class="line">
+                    <p>Posted by {{user.name}} on {{format_date post.date_created}}</p>
+                </div>
+            </div>
+            <div class="row blog_content">
+                <p>{{post.content}}</p>
+                <hr>
+            </div>
+
+            {{!-- COMMENT BODY --}}
+            {{#if post.comments}}
+            {{#each post.comments as |comment|}}
+            <div class="container">
+
+                <div class="row">
+                    <div class="col-12">
+                        <p>Comment by {{{comment.user_id}}} on {{{format_date comment.date_created}}}</p>
+                    </div>
+                </div> 
+                <div class="row blog_content"> 
+                    {{log comment}}
+                    <p>{{{comment.comment}}}</p>
+
+                </div>
+            </div> 
+            {{/each}}
+            {{/if}}
+    
+            {{!-- EDIT POST --}}
+            <hr>
+            <a class="button-style btn margin-btm commentBtn"><i class="far fa-comment"></i> Leave a Comment</a>
+            <a class="button-style btn margin-btm editBtn" data-id="{{post.id}}"><i class="fas fa-pencil-alt"></i> Edit Post</a>
+             <a class="button-style btn margin-btm deleteBtn" data-id="{{post.id}}"><i class="fas fa-trash-alt"></i> Remove Post</a>
+
+              {{!-- COMMENT RELATED --}}
+            <div class="row comment-container hide commentContainer">
+
+                <div class="input-group">
+                    <span class="input-group-text">Comment:</span>
+                    <textarea id="commentText" class="form-control" aria-label="With textarea"></textarea>
+
+                </div> 
+
+                {{!-- SAVE COMMENT --}}
+                <div>
+                    <button type="submit" class="button-style btn saveCommentBtn margin-btm" data-id="{{post.id}}">SUBMIT</button>
+                </div>
+            </div>
+
+             {{!-- EDIT POST --}}
+             <div class="row hide editContainer">
+
+                <div class="input-group">
+                    <span class="input-group-text">Post:</span>
+                    <textarea id="editPost" class="form-control" aria-label="With textarea"></textarea>
+
+                </div> 
+
+                {{!-- SAVE COMMENT --}}
+                <div>
+                    <button type="submit" class="button-style btn saveEditBtn margin-btm" data-id="{{post.id}}">SUBMIT</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <br>
+    <br>
+</body>
+{{/each}}
+<script src="/js/commentEditDelete.js"></script>
