--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,7 @@
-     <h4 class="display-3">Welcome, {{name}}</h4>
+<h4 class="display-3">Welcome, {{name}}</h4>
 <br>
 {{!-- POST BODY --}}
+
 <body id="postContainer">
     {{#each posts as |post|}}
     <div id="dash-style" class="container">
@@ -26,50 +27,56 @@
                     <div class="col-12">
                         <p>Comment by {{{comment.user_id}}} on {{{format_date comment.date_created}}}</p>
                     </div>
-                </div> 
-                <div class="row blog_content"> 
+                </div>
+                <div class="row blog_content">
                     {{log comment}}
                     <p>{{{comment.comment}}}</p>
 
                 </div>
-            </div> 
+            </div>
             {{/each}}
             {{/if}}
-    
+
             {{!-- EDIT POST --}}
             <hr>
-            <a class="button-style btn margin-btm commentBtn"><i class="far fa-comment"></i> Leave a Comment</a>
-            <a class="button-style btn margin-btm editBtn" data-id="{{post.id}}"><i class="fas fa-pencil-alt"></i> Edit Post</a>
-             <a class="button-style btn margin-btm deleteBtn" data-id="{{post.id}}"><i class="fas fa-trash-alt"></i> Remove Post</a>
+            <a class="button-style btn margin-btm commentBtn" data-id="{{post.id}}"><i class="far fa-comment"></i> Leave a Comment</a>
+            <a class="button-style btn margin-btm editBtn" data-id="{{post.id}}"><i class="fas fa-pencil-alt"></i> Edit
+                Post</a>
+            <a class="button-style btn margin-btm deleteBtn" data-id="{{post.id}}"><i class="fas fa-trash-alt"></i>
+                Remove Post</a>
 
-              {{!-- COMMENT RELATED --}}
-            <div class="row comment-container hide commentContainer">
+            {{!-- COMMENT RELATED --}}
+            <div id="idToComment" class="row comment-container hide commentContainer">
 
                 <div class="input-group">
                     <span class="input-group-text">Comment:</span>
                     <textarea id="commentText" class="form-control" aria-label="With textarea"></textarea>
 
-                </div> 
+                </div>
 
                 {{!-- SAVE COMMENT --}}
                 <div>
-                    <button type="submit" class="button-style btn saveCommentBtn margin-btm" data-id="{{post.id}}">SUBMIT</button>
+                    <button type="submit" class="button-style btn saveCommentBtn margin-btm"
+                        data-id="{{post.id}}">SUBMIT</button>
                 </div>
             </div>
 
-             {{!-- EDIT POST --}}
-             <div class="row hide editContainer">
+            {{!-- EDIT POST --}}
+            <div id="editPostDiv{{post.id}}" class="row hide editContainer">
 
-                <div class="input-group">
-                    <span class="input-group-text">Post:</span>
-                    <textarea id="editPost" class="form-control" aria-label="With textarea"></textarea>
+                <form>
+                    <div class="input-group">
+                        <span class="input-group-text">Edit your post:</span>
+                        <textarea id="editPost{{post.id}}" class="form-control" aria-label="With textarea"></textarea>
 
-                </div> 
+                    </div>
 
-                {{!-- SAVE COMMENT --}}
-                <div>
-                    <button type="submit" class="button-style btn saveEditBtn margin-btm" data-id="{{post.id}}">SUBMIT</button>
-                </div>
+                    {{!-- SAVE EDIT --}}
+                    <div>
+                        <button type="submit" class="button-style btn saveEditBtn margin-btm"
+                            data-id="{{post.id}}">SUBMIT</button>
+                    </div>
+                </form>
             </div>
 
         </div>
