hid edit post html

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -40,8 +40,8 @@
             {{!-- EDIT POST --}}
             <hr>
             <a class="button-style btn margin-btm commentBtn" data-id="{{post.id}}"><i class="far fa-comment"></i> Leave a Comment</a>
-            <a class="button-style btn margin-btm editBtn" data-id="{{post.id}}"><i class="fas fa-pencil-alt"></i> Edit
-                Post</a>
+            {{!-- <a class="button-style btn margin-btm editBtn" data-id="{{post.id}}"><i class="fas fa-pencil-alt"></i> Edit
+                Post</a> --}}
             <a class="button-style btn margin-btm deleteBtn" data-id="{{post.id}}"><i class="fas fa-trash-alt"></i>
                 Remove Post</a>
 
